# ever-wallet-browser-extension-old

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  README.md  build.sh  package-lock.json  package.json  report.20210416.165925.83715.0.001.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.extension.common.js  webpack.extension.dev.js  webpack.extension.prod.js  webpack.liteclient.common.js  webpack.liteclient.dev.js  webpack.liteclient.prod.js  webpack.prod.js
nekoton/: Cargo.toml
nekoton-crypto/: Cargo.toml
nekoton-crypto/src/: key_management.rs  lib.rs  storage.rs
nekoton-crypto/src/recovery/: mod.rs  ton_labs.rs  util.rs
nekoton-helpers/: Cargo.toml
nekoton-helpers/src/: abi.rs  crc.rs  lib.rs
nekoton-helpers/src/abi/: contract.rs  message.rs  mod.rs  transaction.rs
nekoton-helpers/src/address/: compute.rs  mod.rs
nekoton-helpers/src/contracts/: SafeMultisigWallet24h.tvc  wallet_code.boc
nekoton/nekoton-crypto/: Cargo.toml
nekoton/nekoton-crypto/src/: key_management.rs  key_managment.rs  lib.rs  recovery.rs
nekoton/nekoton-crypto/src/recovery/: durov.rs  mod.rs  ton_labs.rs
nekoton/src/: address_manipulation.rs  adnl.rs  core.rs  crypto.rs  helpers.rs  lib.rs  storage.rs  utils.rs
nekoton/src/core/: mod.rs  models.rs
nekoton/src/core/accounts_storage/: mod.rs
nekoton/src/core/generic_contract/: mod.rs
nekoton/src/core/keystore/: mod.rs
nekoton/src/core/token_wallet/: mod.rs
nekoton/src/core/ton_wallet/: mod.rs
nekoton/src/core/wallet/: mod.rs
nekoton/src/crypto/: mod.rs
nekoton/src/crypto/encrypted_key/: mod.rs
nekoton/src/helpers/: mod.rs
nekoton/src/helpers/abi/: deserialize.rs  mod.rs  serialize.rs
nekoton/src/storage/: mod.rs
nekoton/src/storage/accounts/: mod.rs
nekoton/src/storage/cache/: mod.rs
nekoton/src/storage/keystore/: mod.rs
nekoton/src/transport/: adnl.rs  gql.rs  jrpc.rs  mod.rs
src/: extension_manifest.json  liteclient_manifest.json  manifest.json  polyfills.ts
src/app/: contentscript.ts  inpage.ts
src/app/background/: ApplicationState.ts  NekotonController.ts  NotificationManager.ts  index.ts  nekotonController.ts  notificationManager.ts  providerMiddleware.ts  utils.ts
src/app/background/controllers/: AccountController.ts  ApprovalController.ts  BaseController.ts  ConnectionController.ts  LocalizationController.ts  NotificationController.ts  PermissionsController.ts  SubscriptionController.ts
src/app/background/lang/: en.ts  jp.ts  ko.ts
src/app/background/ledger/: LedgerApp.ts  LedgerBridge.ts
src/app/background/utils/: ContractSubscription.ts  LedgerConnection.ts  StorageConnector.ts
src/app/provider/: NekotonInpageProvider.ts  index.ts
src/background/: common.ts  contentscript.ts  extension.ts  index.ts  inpage.ts  liteclient.ts  utils.ts
src/background/jrpc/: index.ts
src/background/provider/: index.ts  nekotonInpageProvider.ts  utils.ts
src/components/AddNewToken/: AddNewToken.tsx
src/components/Checkbox/: checkbox.scss
src/components/CloseIcon/: CloseIcon.tsx  close-icon.scss
src/components/CopyButton/: CopyButton.tsx
src/components/EnterPassword/: EnterPassword.tsx
src/components/Input/: Input.tsx  input.scss
src/components/KeyStorage/: KeyStorage.tsx
src/components/Loader/: Loader.tsx
src/components/Receive/: Receive.tsx
src/components/Send/: Send.tsx  send.scss
src/components/SlidingPanel/: SlidingPanel.tsx  sliding-panel.scss
src/components/Tumbler/: tumbler.scss
src/components/assetsList/: index.tsx  style.scss
src/components/assetsListItem/: index.tsx  style.scss
src/components/button/: index.tsx  style.scss
src/components/topBar/: index.tsx  style.scss
src/img/: Test.tsx
src/pages/: WelcomeScreen.tsx  welcome-page.scss
src/pages/CreateAccount/: CreateAccountScreen.tsx  create-account.scss
src/pages/CreatePassword/: create-password.scss
src/pages/GenerateSeed/: GenerateSeedScreen.tsx  generate-seed.scss
src/pages/MainPage/: MainPageScreen.tsx  main-page.scss
src/pages/PolicySignScreen/: PolicySignScreen.tsx  policy-sign.scss
src/pages/WelcomeScreen/: WelcomeScreen.tsx  welcome-page.scss
src/popup/: App.tsx  home.html  index.html  index.tsx  notification.html  popup.html
src/popup/common/: index.ts  ripple.ts
src/popup/components/AccountCard/: index.tsx  style.scss
src/popup/components/AccountDetails/: AccountDetails.tsx  index.tsx  style.scss
src/popup/components/AccountModal/: AccountModal.tsx  index.tsx  style.scss
src/popup/components/AccountSelector/: index.tsx  style.scss
src/popup/components/AccountsManagement/: index.tsx  style.scss
src/popup/components/AddNewAccountCard/: index.tsx  style.scss
src/popup/components/AddNewToken/: AddNewToken.tsx  add-new-token.scss  index.tsx  style.scss
src/popup/components/ApproveContractInteraction/: index.tsx
src/popup/components/ApproveRequestPermissions/: index.tsx  (+1 more)
src/popup/constants/: ledger-url.ts  selectStyle.ts  walletTypes.ts
src/popup/hooks/: useSelectableKeys.ts
src/popup/lang/: en.ts  jp.ts  ko.ts
src/popup/providers/: AccountabilityProvider.tsx  AccountsManagementProvider.tsx  DrawerPanelProvider.tsx  LocalizationProvider.tsx  PasswordCacheProvider.tsx  RpcProvider.tsx  RpcStateProvider.tsx  TransactionProvider.tsx
src/popup/store/: index.ts  rootReducer.ts
src/popup/styles/: _fonts.scss  colors.scss  main.scss
src/popup/utils/: ControllerRpcClient.ts  MetaRPCClient.ts  StreamProvider.ts  debounce.ts  formatData.ts  formatSeedInput.ts  getScrollWidth.ts  index.ts  ledger.ts  noop.ts  platform.ts
src/shared/: approvalApi.ts  backgroundApi.ts  constants.ts  contracts.ts  errors.ts  index.ts  jrpc.ts  utils.ts
src/shared/models/: index.ts
src/store/: index.ts  rootReducer.ts
src/store/app/: actions.ts  reducer.ts  storageConnector.ts  types.ts
src/styles/: _fonts.scss  _reset.scss  colors.scss  main.scss
src/styles/shared/: _importOnce.scss  animations.scss
src/typings/: custom.d.ts  hw-transport-webhid.d.ts  obj-multiplex.d.ts  promise-to-callback.d.ts  window.d.ts
(+272 files in other folders)
