[package]
name = "nekoton-crypto"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
ed25519-dalek = "1.0.1"
secstr = "0.4.0"
chacha20poly1305 = "0.7.1"
tiny-hderive = "0.3.0"
tiny-bip39 = "0.8.0"
hex = "0.4.3"
anyhow = "*"
ring = "0.16"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13.0"
