[package]
name = "nekoton-helpers"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
ed25519-dalek = "1.0.1"

ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
ton_block ={git="https://github.com/tonlabs/ton-labs-block.git"}
ton_sdk = {git = "https://github.com/tonlabs/TON-SDK.git"}
ton_types = {git = "https://github.com/tonlabs/ton-labs-types.git"}

[dev-dependencies]
pretty_assertions = "0.7.1"
hex = "0.4.3"