[package]
name = "nekoton"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
base64 = "0.13"
ed25519-dalek = "1.0.1"
futures = "0.3"
js-sys = "0.3"
pin-project-lite = "0.2"
rand = { version = "0.7", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
syn = "=1.0.64"
thiserror = "1.0"
wasm-bindgen = { version = "=0.2.70", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"
x25519-dalek = "1.1"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }

ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[dependencies.libnekoton]
package = "nekoton"
git = "ssh://git@gitlab.dexpa.io/crystal-wallet/nekoton.git"
branch = "dev"
features = ["web"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
