[package]
name = "bindings"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"
description = "Nekoton bindings for WASM"
repository = "https://github.com/broxus/ton-wallet-crystal-browser-extension"
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
base64 = "0.13"
console_error_panic_hook = "0.1"
dyn-clone = "1.0"
ed25519-dalek = "1.0.1"
futures = "0.3"
js-sys = "0.3"
log = "0.4"
num-bigint = "0.2"
num-traits = "0.2"
pin-project-lite = "0.2"
rand = { version = "0.7", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
syn = "=1.0.72"
thiserror = "1.0"
wasm-bindgen = { version = "=0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
x25519-dalek = "1.1"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
wasm-logger = "0.2"

ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[dependencies.nt]
package = "nekoton"
git = "https://github.com/broxus/nekoton.git"
branch = "master"
features = ["web", "gql_transport", "jrpc_transport"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
