[package]
name = "bindings"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"
description = "Nekoton bindings for WASM"
repository = "https://github.com/broxus/ton-wallet-crystal-browser-extension"
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
console_error_panic_hook = "0.1"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3"
num-bigint = "0.3"
num-traits = "0.2"
rand = { version = "0.8", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
thiserror = "1.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo-utils = "0.1.5"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

[dependencies.nt]
package = "nekoton"
features = ["web", "gql_transport", "jrpc_transport"]
git = "https://github.com/broxus/nekoton.git"

[dependencies.nt_utils]
package = "nekoton-utils"
git = "https://github.com/broxus/nekoton.git"

[dependencies.nt_abi]
package = "nekoton-abi"
git = "https://github.com/broxus/nekoton.git"
