[package]
name = "nekoton-crypto"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.1"
secstr = "0.4.0"
chacha20poly1305 = "0.7.1"
tiny-hderive = "0.3.0"
tiny-bip39 = "0.8.0"
hex ="0.4.3"
rand = "0.6"
anyhow = "*"
getrandom = "0.2.2"
ring = "0.16.20"

serde = {version =  "1", features =["derive"] }
serde_json = "1"